--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
   <header class="site-header">
     <div class="container">
+      <div class="logos">
+        <img src="logo_efg.png" alt="Logo EFG">
+        <img src="logoCEPI2018.jfif" alt="Logo CEPI">
+        <img src="Brasao_Estado_Goias-8cc.png" alt="Governo de Goiás">
+      </div>
       <h1>Prof. Rodrigo — Portfólio dos Alunos</h1>
       <p class="lead">Curso Técnico em Desenvolvimento Web e Cibersegurança — Apresentação dos trabalhos por turma e times.</p>
       <nav class="class-nav" id="classNav" aria-label="Navegação por turmas"></nav>
@@ -49,4 +54,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
