--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Portfólio — Curso Técnico em Desenvolvimento Web & Cibersegurança</title>
+  <title>Portfólio</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -56,3 +56,4 @@
 </body>
 
 </html>
+
